@@ -1,3 +1,7 @@
+2010-05-31  Kirit Saelensminde  <kirit@felspar.com>
+ Fost authentication
+ - Added a utility function to add the authentication to a user agent.
+
 2010-05-30  Kirit Saelensminde  <kirit@felspar.com>
  Host
  - A host can now be configured with a port number as the service.
